--- a/Unit01/40460_Mod01_1.2.ipynb
+++ b/Unit01/40460_Mod01_1.2.ipynb
@@ -35,6 +35,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Hello my name is Nigel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Concept: What is a **String?**  \n",
     "[![view video](https://iajupyterprodblobs.blob.core.windows.net/imagecontainer/common/play_video.png)]( http://edxinteractivepage.blob.core.windows.net/edxpages/f7cff1a7-5601-48a1-95a6-fd1fdfabd20e.html?details=[{\"src\":\"http://jupyternootbookwams.streaming.mediaservices.windows.net/cbe90d91-876f-42f3-90df-2955588d02b0/Unit1_Section1.2-String.ism/manifest\",\"type\":\"application/vnd.ms-sstr+xml\"}],[{\"src\":\"http://jupyternootbookwams.streaming.mediaservices.windows.net/cbe90d91-876f-42f3-90df-2955588d02b0/Unit1_Section1.2-String.vtt\",\"srclang\":\"en\",\"kind\":\"subtitles\",\"label\":\"english\"}])\n",
     "Strings were used in \"Hello World!\" print function examples. Strings are sets of characters.  In Python, strings are in double or single quotes like `\"Hello World!\"` or `'after edit, save!'`  \n",
