--- a/Unit01/40460_Mod02_2.1.ipynb
+++ b/Unit01/40460_Mod02_2.1.ipynb
@@ -46,11 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World! I am sending string arguments to print \n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello World!', 'I am sending string arguments to print ')"
    ]
@@ -371,7 +379,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+   }
   }
  },
  "nbformat": 4,
