--- a/Unit01/40460_Mod02_Project2.ipynb
+++ b/Unit01/40460_Mod02_Project2.ipynb
@@ -26,13 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fish Type: Cod Costs $5\n"
+     ]
+    }
+   ],
    "source": [
-    "# [ ] create, call and test fishstore() function \n"
+    "# [ ] create, call and test fishstore() function \n",
+    "def fishstore():\n",
+    "    fish_type = input(\"fish\").capitalize()\n",
+    "    fish_cost = input(\"cost\")\n",
+    "    fishy = \"Fish Type: \" + fish_type + \" Costs \" \"$\" + fish_cost\n",
+    "    return fishy\n",
+    "\n",
+    "print(fishstore()) "
    ]
   },
   {
@@ -60,7 +75,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+   }
   }
  },
  "nbformat": 4,
