--- a/Unit01/40460_Mod03_3.1.ipynb
+++ b/Unit01/40460_Mod03_3.1.ipynb
@@ -42,11 +42,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True means do something\n"
+     ]
+    }
+   ],
    "source": [
     "if True:\n",
     "    print(\"True means do something\")\n",
@@ -56,11 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enjoy some hot tea!\n"
+     ]
+    }
+   ],
    "source": [
     "hot_tea = True\n",
     "\n",
@@ -72,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -88,11 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how have you been?\n"
+     ]
+    }
+   ],
    "source": [
     "# changed the value of someone_i_know\n",
     "someone_i_know = True\n",
@@ -116,28 +140,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunny\n"
+     ]
+    }
+   ],
    "source": [
     "sunny_today = True\n",
     "# [ ] test if it is sunny_today and give proper responses using if and else\n",
-    "\n"
+    "if sunny_today:\n",
+    "    print(\"Sunny\")\n",
+    "else:\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cloudy\n"
+     ]
+    }
+   ],
    "source": [
     "sunny_today = False\n",
     "# [ ] use code you created above and test sunny_today = False\n",
-    "\n"
+    "if sunny_today:\n",
+    "    print(\"sunny\")\n",
+    "else:\n",
+    "    print(\"cloudy\")"
    ]
   },
   {
@@ -166,11 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "book book  - consider capitalization throughout for book titles.\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "favorite_book = input(\"Enter the title of a favorite book: \")\n",
@@ -183,11 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3 is not a positive integer\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "a_number = input(\"enter a positive integer number: \")\n",
@@ -206,11 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "punto starts with \"P\"\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "vehicle_type = input('\"enter a type of vehicle that starts with \"P\": ')\n",
@@ -234,16 +304,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string 1 lower\n",
+      "string 2 not lower\n"
+     ]
+    }
+   ],
    "source": [
     "test_string_1 = \"welcome\"\n",
     "test_string_2 = \"I have $3\"\n",
     "# [ ] use if, else to test for islower() for the 2 strings\n",
-    "\n"
+    "if test_string_1.islower():\n",
+    "    print(\"string 1 lower\")\n",
+    "else:\n",
+    "    print(\"string 1 not lower\")\n",
+    "\n",
+    "if test_string_2.islower():\n",
+    "     print(\"string 2 lower\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"string 2 not lower\")"
    ]
   },
   {
@@ -258,19 +346,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n",
+      "NO\n",
+      "NO\n"
+     ]
+    }
+   ],
    "source": [
     "test_string_1 = \"welcome\"\n",
     "test_string_2 = \"I have $3\"\n",
     "test_string_3 = \"With a function it's efficient to repeat code\"\n",
     "# [ ] create a function w_start_test() use if & else to test with startswith('w')\n",
+    "def w_start_test(test):\n",
+    "    if test.startswith(\"w\"):\n",
+    "        print(\"YES\")\n",
+    "    else:\n",
+    "        print(\"NO\") \n",
     "\n",
     "# [ ] Test the 3 string variables provided by calling w_start_test()\n",
-    "\n"
+    "w_start_test(test_string_1)\n",
+    "w_start_test(test_string_2)\n",
+    "w_start_test(test_string_3)\n"
    ]
   },
   {
@@ -298,7 +403,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+   }
   }
  },
  "nbformat": 4,
