--- a/Unit01/40460_Mod03_3.2.ipynb
+++ b/Unit01/40460_Mod03_3.2.ipynb
@@ -44,11 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run code to see if 3 greater than 5\n",
     "3 > 5"
@@ -56,11 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run code to see if 3 less than or equal to 5\n",
     "3 <= 5"
@@ -68,11 +90,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run code \n",
     "\n",
@@ -85,11 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x not equal 9 is True\n",
+      "x equal 3 is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run code \n",
     "x = 3\n",
@@ -108,27 +150,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is equal to 13 True\n"
+     ]
+    }
+   ],
    "source": [
     "X = 9 + 4\n",
     "# [ ] create a test to print() True or False for x is equal to 13\n",
-    "\n"
+    "print(\"x is equal to 13\", X == 13)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a test to print True or False for 3 + 3 is greater than 2 + 4\n",
-    "\n"
+    "\n",
+    "print(3 + 3 > 2 + 4)"
    ]
   },
   {
@@ -152,11 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x was 21\n",
+      "now x is 25\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "x = 21\n",
@@ -170,27 +238,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass: x + 18 is equal to 36\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "x = 18\n",
     "if x + 18 == x + x:\n",
     "    print(\"Pass: x + 18 is equal to\", x + x)\n",
     "else:\n",
-    "    print(\"Fail: x + 18 is not equal to\", x + x)"
+    "    print(\"Fail: x + 18 is not equal to\", x + x) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is 18\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell. \"!\" means \"not\"\n",
     "x = 18\n",
@@ -203,17 +287,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"==\" tests for, is equal to\n"
+     ]
+    }
+   ],
    "source": [
     "# review code and run cell\n",
     "# DON'T ASSIGN (x = 2) when you mean to COMPARE (x == 2)\n",
     "x = 2\n",
     "\n",
-    "if x = 2:\n",
+    "if x == 2:\n",
     "    print('\"==\" tests for, is equal to')\n",
     "else:\n",
     "    pass"
@@ -269,7 +361,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
+   }
   }
  },
  "nbformat": 4,
