--- a/Unit01/40460_Mod03_3.2.ipynb
+++ b/Unit01/40460_Mod03_3.2.ipynb
@@ -322,17 +322,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y greater than or equal x + x is true\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create an if/else statement that tests if y is greater than or equal x + x \n",
     "# [ ] print output: \"y greater than or equal x + x is\" True/False ...or a similar output\n",
     "x = 3\n",
     "y = x + 8\n",
-    "\n"
+    "\n",
+    "if y > x + x:\n",
+    "    print(\"y greater than or equal x + x is true\")\n",
+    "else:\n",
+    "    print(\"y greater than or equal x + x is false\")\n"
    ]
   },
   {
