--- a/Unit01/40460_Mod05_FinalProject.ipynb
+++ b/Unit01/40460_Mod05_FinalProject.ipynb
@@ -84,7 +84,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
       "metadata": {
         "collapsed": true,
         "trusted": false
@@ -96,7 +103,7 @@
           "text": [
             "\n",
             "\tTotal:\n",
-            "\t0\n"
+            "\t1\n"
           ]
         }
       ],
@@ -108,6 +115,8 @@
         "def adding_report(TorA):\n",
         "    total = 0\n",
         "    items = \"\"\n",
+        "    if TorA not in \"t,a\":\n",
+        "        TorA = \"t\"\n",
         "    while TorA.lower() == \"t\":\n",
         "        inum1= input(\"input integer or 'q' to quit\")\n",
         "        if inum1.isdigit():\n",
@@ -131,7 +140,7 @@
         "\n",
         "        \n",
         "\n",
-        "adding_report(input(\"TorA?\"))"
+        "adding_report(input(\"T for Total, A for All\"))"
       ]
     },
     {
