--- a/Unit01/40460_Mod05_FinalProject.ipynb
+++ b/Unit01/40460_Mod05_FinalProject.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "trusted": false
@@ -103,7 +103,7 @@
           "text": [
             "\n",
             "\tTotal:\n",
-            "\t1\n"
+            "\t4\n"
           ]
         }
       ],
@@ -140,7 +140,8 @@
         "\n",
         "        \n",
         "\n",
-        "adding_report(input(\"T for Total, A for All\"))"
+        "adding_report(input(\"T for Total, A for All\"))\n",
+        "\n"
       ]
     },
     {
@@ -153,7 +154,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.0 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -167,11 +168,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.9.0"
     },
     "vscode": {
       "interpreter": {
-        "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+        "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
       }
     }
   },
