--- a/Unit02/40461_Mod02_2.2.ipynb
+++ b/Unit02/40461_Mod02_2.2.ipynb
@@ -43,11 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list before:  [1, 1, 2]\n",
+      "sample_list after:   [1, 1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# the list before append\n",
@@ -246,7 +255,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
