--- a/Unit02/40461_Mod01_1.1.ipynb
+++ b/Unit02/40461_Mod01_1.1.ipynb
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "trusted": false
       },
@@ -172,20 +172,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "trusted": false
       },
       "outputs": [
         {
-          "ename": "IndexError",
-          "evalue": "string index out of range",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# [ ] Create an input variable: team_name - ask that second letter = \"i\", \"o\", or \"u\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# [ ] Test if team_name 2nd character = \"i\", \"o\", or \"u\" and print a message\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# note: use if, elif and else\u001b[39;00m\n\u001b[0;32m      4\u001b[0m team_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTeam name\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mteam_name\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mi\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124mi\u001b[39m\u001b[38;5;130;01m\\\"\u001b[39;00m\u001b[38;5;124m Is the 2nd letter in\u001b[39m\u001b[38;5;124m\"\u001b[39m, team_name)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m team_name[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
-            "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\"i\" Is the 2nd letter in City\n"
           ]
         }
       ],
@@ -195,13 +191,13 @@
         "# note: use if, elif and else\n",
         "team_name = input(\"Team name\")\n",
         "if team_name[1].lower() == \"i\":\n",
-        "    print(\"\\\"i\\\" Is the 2nd letter in\", team_name)\n",
+        "    print(\"\\\"i\\\" Is the 2nd letter in\", team_name.title())\n",
         "elif team_name[1].lower() == \"o\":\n",
-        "    print(\"\\\"o\\\" Is the 2nd letter in\", team_name)\n",
+        "    print(\"\\\"o\\\" Is the 2nd letter in\", team_name.title())\n",
         "elif team_name[1].lower() == \"u\":\n",
-        "    print(\"\\\"u\\\" Is the 2nd letter in\", team_name)\n",
+        "    print(\"\\\"u\\\" Is the 2nd letter in\", team_name.title())\n",
         "else:\n",
-        "    print()"
+        "    print(\"\\\"i\\\", \\\"o\\\" or \\\"u\\\" is not the second letter\") "
       ]
     },
     {
@@ -242,11 +238,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Joana ends with 'a'\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "student_name = \"Joana\"\n",
@@ -258,11 +262,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Joana has 2nd to last letter of 'n'\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# get second to last letter\n",
@@ -272,11 +284,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "for Joana\n",
+            "index 3 = 'n'\n",
+            "index -2 = 'n'\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# you can get to the same letter with index counting + or -\n",
@@ -296,29 +318,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "h\n",
+            "c\n",
+            "e\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
         "# [ ] print the last 3 characters of street_name\n",
-        "\n"
+        "print(street_name[-1])\n",
+        "print(street_name[-2])\n",
+        "print(street_name[-3])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The First letter is 'T'. The Last letter is 's'.\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] create and assign string variable: first_name\n",
-        "\n",
+        "first_name = \"Thomas\"\n",
         "# [ ] print the first and last letters of name\n",
-        "\n"
+        "print(\"The First letter is\", \"'\"+ first_name[0] + \"'.\", \"The Last letter is\", \"'\"+ first_name[-1] + \"'.\")\n"
       ]
     },
     {
@@ -332,16 +374,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "s\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Review, Run, Fix the error using string index\n",
         "shoe = \"tennis\"\n",
         "# print the last letter\n",
-        "print(shoe(-1))\n",
+        "print(shoe[-1])\n",
         "\n"
       ]
     },
@@ -370,7 +420,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+      "version": "3.9.0"
     },
     "vscode": {
       "interpreter": {
