--- a/Unit01/40460_Mod05_FinalProject.ipynb
+++ b/Unit01/40460_Mod05_FinalProject.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "trusted": false
@@ -101,9 +101,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Only integers allowed\n",
+            "\tItems:\t\n",
+            "\t23\n",
+            "\t5\n",
+            "\t3\n",
+            "\t4\n",
+            "\t5\n",
+            "\t3\n",
+            "\t4\n",
+            "\t6\n",
+            "\t3\n",
             "\n",
             "\tTotal:\n",
-            "\t4\n"
+            "\t56\n"
           ]
         }
       ],
@@ -168,7 +179,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+      "version": "3.9.0"
     },
     "vscode": {
       "interpreter": {
