--- a/Unit02/40461_Mod01_Project1.ipynb
+++ b/Unit02/40461_Mod01_Project1.ipynb
@@ -81,8 +81,8 @@
    "source": [
     "# [] create words after \"G\" following the Assignment requirements use of functions, menhods and kwyowrds\n",
     "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
-    "\n",
-    "\n",
+    "quote = input(\"type a quote\")\n",
+    "word = \"\"\n",
     "\n",
     "\n"
    ]
@@ -112,7 +112,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
