--- a/Unit02/40461_Mod01_1.3.ipynb
+++ b/Unit02/40461_Mod01_1.3.ipynb
@@ -174,17 +174,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "T\n",
+            "o\n",
+            "m\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Get user input for first_name\n",
         "# [ ] iterate through letters in first_name \n",
         "#    - print each letter on a new line\n",
+        "first_name = input(\"First Name?\").title()\n",
         "\n",
-        "\n",
+        "for l in first_name:\n",
+        "    print(l)\n",
         "\n"
       ]
     },
@@ -203,14 +215,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "thomas to thOmas\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Create capitalize-io\n",
-        "\n"
+        "first_name = input(\"First Name?\")\n",
+        "new_name = \"\"\n",
+        "\n",
+        "for ltr in first_name:\n",
+        "    if ltr.lower() == \"i\":\n",
+        "        new_name += ltr.upper()\n",
+        "    elif ltr.lower() == \"o\":\n",
+        "        new_name += ltr.upper()\n",
+        "    else:\n",
+        "        new_name += ltr\n",
+        "print(first_name,\"to\",new_name)\n"
       ]
     },
     {
@@ -240,11 +270,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "S\n",
+            "k\n",
+            "y\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "student_name = \"Skye\"\n",
@@ -255,11 +295,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "y\n",
+            "k\n",
+            "S\n"
+          ]
+        }
+      ],
       "source": [
         "# Iterate BACKWARDS\n",
         "# [ ] review and run example\n",
@@ -281,30 +331,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "j\n",
+            "x\n",
+            "a\n",
+            "o\n",
+            "i\n",
+            "i\n",
+            "n\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] create & print a variable, other_word, made of every other letter in long_word\n",
         "long_word = \"juxtaposition\"\n",
-        "\n"
+        "\n",
+        "other_word = long_word[::2]\n",
+        "for l in other_word:\n",
+        "    print(l)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "eulBBlue\n"
+          ]
+        }
+      ],
       "source": [
         "# Mirror Color\n",
         "# [ ] get user input, fav_color\n",
         "# [ ] print fav_color backwards + fav_color\n",
         "# example: \"Red\" prints \"deRRed\"\n",
-        "\n"
+        "fav_colour = input(\"Fav colour\").capitalize()\n",
+        "print(fav_colour[::-1] + fav_colour)\n"
       ]
     },
     {
