--- a/Unit02/40461_Mod02_2.3.ipynb
+++ b/Unit02/40461_Mod02_2.3.ipynb
@@ -45,11 +45,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "party_list before:  ['Joana', 'Alton', 'Tobias']\n",
+            "party_list after:   ['Joana', 'Colette', 'Tobias']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# the list before Insert\n",
@@ -63,11 +72,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "before: ['Joana', 'Alton', 'Tobias']\n",
+            "\n",
+            "after: ['Joana', 'Alton Derosa', 'Tobias']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "party_list = [\"Joana\", \"Alton\", \"Tobias\"]\n",
@@ -87,11 +106,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "IndexError",
+          "evalue": "list assignment index out of range",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn [3], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# IndexError Example\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# [ ] review and run example which results in an IndexError\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# if result is NameError run cell above before running this cell\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[1;32m      5\u001b[0m \u001b[39m# IndexError trying to append to end of list\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m party_list[\u001b[39m3\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mAlton\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      7\u001b[0m \u001b[39mprint\u001b[39m(party_list)\n",
+            "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+          ]
+        }
+      ],
       "source": [
         "# IndexError Example\n",
         "# [ ] review and run example which results in an IndexError\n",
@@ -104,11 +135,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "single_digits:  ['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine']\n",
+            "single_digits[3]:  three <class 'str'> \n",
+            "\n",
+            "single_digits:  ['zero', 'one', 'two', 3, 'four', 'five', 'six', 'seven', 'eight', 'nine']\n",
+            "single_digits[3]:  3 <class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example changes the data type of an element\n",
         "# replace a string with a number (int)\n",
@@ -139,15 +182,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[10, 2, 3]\n",
+            "['large', 2, 3]\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] complete \"replace items in a list\" task\n",
+        "three_num = [10,2,3]\n",
+        "print(three_num) \n",
+        "if three_num[0] < 5:\n",
+        "    three_num[0] = \"small\"\n",
+        "else:\n",
+        "    three_num[0] = \"large\"\n",
         "\n",
-        " \n"
+        "print(three_num)"
       ]
     },
     {
@@ -166,14 +224,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ]  create challenge function\n",
+        "nums = []\n",
+        "num = \"0\"\n",
+        "count = -1\n",
+        "while num.isdigit():\n",
+        "       num = input(\"num\")\n",
+        "       if num.isdigit():\n",
+        "              nums.append(int(num))\n",
+        "              count += 1\n",
+        "       elif num.lower() == \"q\":\n",
+        "              break\n",
+        "       else:\n",
+        "              print(\"num only - q to quit\")\n",
         "\n",
+        "\n",
+        "def str_replace(nlist, li): \n",
+        "       index = 0\n",
+        "       if li.lower() == \"i\":\n",
+        "              while index <= count:\n",
+        "                     if nlist[index] < 5:\n",
+        "                            nlist[index] = \"small\"\n",
+        "                            index += 1\n",
+        "                     else:\n",
+        "                            nlist[index] = \"large\"\n",
+        "                            index += 1 \n",
+        "              print(nums)\n",
+        "       elif li.lower() == \"l\":\n",
+        "              print(nums)\n",
+        "       else:\n",
+        "              print(\"l or i only\")\n",
+        "       \n",
+        "\n",
+        "str_replace(nums, input(\"l or i\"))\n",
         "\n"
       ]
     },
@@ -193,14 +290,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Dan', 'Rob', 'Tom']\n",
+            "['DAN', 'Rob', 'tOM']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] complete coding task described above\n",
-        "\n",
+        "three_words = [\"Dan\",\"Rob\",\"Tom\"]\n",
+        "print(three_words)\n",
+        "three_words[0] = three_words[0].upper()\n",
+        "three_words[2] = three_words[2].swapcase()\n",
+        "print(three_words)\n",
         " \n"
       ]
     },
@@ -228,11 +338,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "party_list before:  ['Joana', 'Alton', 'Tobias']\n",
+            "index 1 is Alton \n",
+            "index 2 is Tobias \n",
+            "\n",
+            "party_list after:   ['Joana', 'Colette', 'Alton', 'Tobias']\n",
+            "index 1 is Colette \n",
+            "index 2 is Alton \n",
+            "index 3 is Tobias\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# the list before Insert\n",
@@ -257,17 +382,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Joana', 'Tom', 'Alton', 'Tobias']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] insert a name from user input into the party_list in the second position (index 1)\n",
         "party_list = [\"Joana\", \"Alton\", \"Tobias\"]\n",
-        "\n",
+        "party_list.insert(1, input(\"Name\").title())\n",
         "# [ ] print the updated list\n",
-        "\n"
+        "print(party_list)\n"
       ]
     },
     {
@@ -279,14 +412,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tree_list before = ['oak']\n",
+            "tree_list after  = ['oak', 'pine']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] Fix the Error\n",
-        "tree_list = \"oak\"\n",
+        "tree_list = [\"oak\"]\n",
         "print(\"tree_list before =\", tree_list)\n",
         "tree_list.insert(1,\"pine\")\n",
         "print(\"tree_list after  =\", tree_list)\n",
@@ -318,11 +460,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+        "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
       }
     }
   },
