--- a/Unit02/40461_Mod01_Project1.ipynb
+++ b/Unit02/40461_Mod01_Project1.ipynb
@@ -73,18 +73,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIFE\n",
+      "IS\n",
+      "WHAT\n",
+      "HAPPENS\n",
+      "WHEN\n",
+      "MAKING\n",
+      "OTHER\n",
+      "PLANS\n",
+      "\n",
+      "LIFE\n",
+      "IS\n",
+      "WHAT\n",
+      "HAPPENS\n",
+      "WHEN\n",
+      "MAKING\n",
+      "OTHER\n",
+      "PLANS\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create words after \"G\" following the Assignment requirements use of functions, menhods and kwyowrds\n",
     "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
     "quote = input(\"type a quote\")\n",
     "word = \"\"\n",
+    "for l in quote.split(\" \"):\n",
+    "    if l.isalpha():\n",
+    "        if l.lower() >= \"h\":\n",
+    "            word += l + \"\\n\"\n",
+    "    else:\n",
+    "        word += \"\"\n",
     "\n",
-    "\n"
+    "print(word.upper())\n",
+    "\n",
+    "words = \"\"\n",
+    "inp_quote = quote + \" \"\n",
+    "start = 0\n",
+    "space_index = quote.find(\" \")\n",
+    "while space_index != -1:\n",
+    "    words = inp_quote[start:space_index]\n",
+    "    start = space_index + 1\n",
+    "    space_index = inp_quote.find(\" \", space_index + 1)\n",
+    "    if words.isalpha() and words[0].lower() > \"g\":\n",
+    "        print(words.upper())\n"
    ]
   },
   {
@@ -112,11 +153,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
