--- a/Unit02/40461_Mod02_2.1.ipynb
+++ b/Unit02/40461_Mod02_2.1.ipynb
@@ -49,11 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ft_bones:  <class 'list'>\n",
+      "['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# define list of strings\n",
@@ -68,11 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age_survey:  <class 'list'>\n",
+      "[12, 14, 12, 29, 12, 14, 12, 12, 13, 12, 14, 13, 13, 46, 13, 12, 12, 13, 13, 12, 12]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# define list of integers\n",
@@ -87,11 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mixed_list:  <class 'list'>\n",
+      "[1, 34, 0.999, 'dog', 'cat', ['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform'], [12, 14, 12, 29, 12, 14, 12, 12, 13, 12, 14, 13, 13, 46, 13, 12, 12, 13, 13, 12, 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# define list of mixed data type\n",
@@ -115,30 +142,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arsenal', 'Spurs', 'City', 'United', 'Liverpool']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create team_names list and populate with 3-5 team name strings\n",
-    "\n",
+    "team_names = [\"Arsenal\", \"Spurs\", \"City\", \"United\", \"Liverpool\"]\n",
     "# [ ] print the list\n",
-    "\n"
+    "print(team_names)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tom', 'rob', 1, 3, 5, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list mix_list with numbers and strings with 4-6 items\n",
-    "\n",
+    "mix_list = [\"tom\", \"rob\", 1,3,5,7]\n",
     "# [ ] print the list\n",
-    "\n"
+    "print(mix_list)\n"
    ]
   },
   {
@@ -172,11 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcaneus is the 1st bone on the list\n",
+      "cuboid is the 3rd bone on the list\n",
+      "medial cuneiform is the last bone on the list\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(ft_bones[0], \"is the 1st bone on the list\")\n",
@@ -186,11 +239,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "talus is connected to the navicular\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(ft_bones[1], \"is connected to the\",ft_bones[3])"
@@ -198,11 +259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first three ages total 38\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "three_ages_sum = age_survey[0] + age_survey[1] + age_survey[2]\n",
@@ -220,30 +289,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there is no parking on west street and/or merlin drive\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list, streets, that lists the name of 5 street name strings\n",
-    "\n",
+    "streets = [\"west street\", \"east street\", \"north street\", \"south street\", \"merlin drive\"]\n",
     "# [ ] print a message that there is \"No Parking\" on index 0 or index 4 streets\n",
-    "\n"
+    "print(\"there is no parking on\", streets[0],\"and/or\",streets[4])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list, num_2_add, made of 5 different numbers between 0 - 25\n",
-    "\n",
+    "num_2_add = [2,23,4,17,6]\n",
+    "sum2 = num_2_add[0] + num_2_add[1] + num_2_add[2] + num_2_add[3] + num_2_add[4] \n",
     "# [ ] print the sum of the numbers\n",
-    "\n"
+    "print(sum2)\n"
    ]
   },
   {
@@ -257,11 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pay_checks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [12], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] Review & Run, but ***Do Not Edit*** this code cell\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# [ ] Fix the error by only editing and running the block below\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m Total of checks 3 & 4 = $\u001b[39m\u001b[39m\"\u001b[39m, pay_checks[\u001b[39m2\u001b[39m] \u001b[39m+\u001b[39m pay_checks[\u001b[39m3\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pay_checks' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review & Run, but ***Do Not Edit*** this code cell\n",
     "# [ ] Fix the error by only editing and running the block below\n",
@@ -271,14 +369,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total of checks 3 & 4 = $ 7\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the error above by creating and running code in this cell\n",
-    "\n"
+    "pay_checks = [1,2,3,4]\n",
+    "print(\" Total of checks 3 & 4 = $\", pay_checks[2] + pay_checks[3])"
    ]
   },
   {
@@ -306,11 +413,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
