--- a/Unit02/40461_Mod02_2.2.ipynb
+++ b/Unit02/40461_Mod02_2.2.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -70,11 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list start:   [1, 1, 2, 3, 3, 8, 5]\n",
+      "sample_list added:   [1, 1, 2, 3, 3, 8, 5, 3]\n",
+      "sample_list added:   [1, 1, 2, 3, 3, 8, 5, 3, 8]\n",
+      "sample_list added:   [1, 1, 2, 3, 3, 8, 5, 3, 8, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# append number to sample_list\n",
@@ -96,11 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mixed_types list:  [1, 'cat', 3]\n",
+      "mixed_types list:  [1, 'cat', 3, 'turtle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "mixed_types = [1, \"cat\"]\n",
@@ -124,40 +144,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original list: [0.1, 0.04, 1.4, 2.5, 0.15]\n",
+      "Updated list: [0.1, 0.04, 1.4, 2.5, 0.15, 2.3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Currency Values\n",
     "# [ ] create a list of 3 or more currency denomination values, cur_values\n",
     "# cur_values, contains values of coins and paper bills (.01, .05, etc.)\n",
-    "\n",
+    "cur_values = [0.1, 0.04, 1.4,2.5,0.15]\n",
     "# [ ] print the list\n",
-    "\n",
+    "print(\"original list:\", cur_values)\n",
     "\n",
     "# [ ] append an item to the list and print the list\n",
-    " \n"
+    "cur_values.append(2.3)\n",
+    "print(\"Updated list:\",cur_values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original list: ['penny', 'dollar', 'pound', 'cent']\n",
+      "Updated list: ['penny', 'dollar', 'pound', 'cent', 'dime']\n"
+     ]
+    }
+   ],
    "source": [
     "# Currency Names\n",
     "# [ ] create a list of 3 or more currency denomination NAMES, cur_names\n",
     "# cur_names contains the NAMES of coins and paper bills (penny, etc.)\n",
-    "\n",
+    "cur_names = [\"penny\", \"dollar\", \"pound\", \"cent\"]\n",
     "# [ ] print the list\n",
-    "\n",
+    "print(\"original list:\", cur_names)\n",
     "\n",
     "# [ ] append an item to the list and print the list\n",
-    " \n"
+    "cur_names.append(\"dime\")\n",
+    "print(\"Updated list:\", cur_names)"
    ]
   },
   {
@@ -171,16 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['penny', 'dollar', 'pound', 'cent', 'dime', 'quarter']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] append additional values to the Currency Names list using input()\n",
-    "\n",
+    "cur_names.append(input(\"Currency name\"))\n",
     "# [ ] print the appended list\n",
-    "\n"
+    "print(cur_names)\n"
    ]
   },
   {
@@ -199,13 +247,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dates between 1-31 only\n",
+      "Number only\n",
+      "[3, 1, 2, 3, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete the Birthday Survey task above\n",
+    "bday_survey = []\n",
+    "bday = 0\n",
+    "while bday != \"q\":\n",
+    "    bday = input(\"bday\")\n",
+    "    if bday.isdigit():\n",
+    "        if int(bday) >= 1 and int(bday) <= 31:\n",
+    "            bday_survey.append(int(bday))\n",
+    "        else:\n",
+    "            print(\"dates between 1-31 only\")\n",
+    "    else:\n",
+    "        print (\"Number only\")\n",
+    "print(bday_survey)       \n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -218,15 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "an item in the list is:  2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the Error\n",
     "three_numbers = [1, 1, 2]\n",
-    "print(\"an item in the list is: \", three_numbers[3])\n",
+    "print(\"an item in the list is: \", three_numbers[2])\n",
     "\n"
    ]
   },
@@ -255,11 +335,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
    }
   }
  },
