--- a/Unit02/40461_Mod02_2.4.ipynb
+++ b/Unit02/40461_Mod02_2.4.ipynb
@@ -44,11 +44,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "sample_list before:  [11, 21, 13, 14, 51, 161, 117, 181]\n",
+            "sample_list after:   [11, 13, 14, 51, 161, 117, 181]\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# the list before delete\n",
@@ -62,11 +71,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "sample_list before: [11, 13, 14, 51, 161, 117, 181]\n",
+            "sample_list after: [13, 14, 51, 161, 117, 181]\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example Multiple Times\n",
         "# [ ] consider how to reset the list values?\n",
@@ -77,11 +95,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "mixed_types list:  [1, 'cat', 3]\n",
+            "mixed_types list:  [1, 'cat', 3, 'turtle']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "mixed_types = [1, \"cat\"]\n",
@@ -105,11 +132,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['calcaneus', 'talus', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print ft_bones list\n",
         "# [ ] delete \"cuboid\" from ft_bones\n",
@@ -117,7 +152,8 @@
         "ft_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
         "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
         "\n",
-        "\n"
+        "del ft_bones[2]\n",
+        "print(ft_bones)\n"
       ]
     },
     {
@@ -129,11 +165,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n",
+            "['calcaneus', 'talus', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] print ft_bones list\n",
         "# [ ] delete \"cuboid\" from ft_bones\n",
@@ -143,7 +188,10 @@
         "ft_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
         "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
         "\n",
-        "\n"
+        "print(ft_bones)\n",
+        "del ft_bones[2]\n",
+        "del ft_bones[2]\n",
+        "print(ft_bones)"
       ]
     },
     {
@@ -168,11 +216,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Joana', 'Alton', 'Tobias']\n",
+            "Hello, Tobias\n",
+            "\n",
+            " ['Joana', 'Alton']\n",
+            "Hello, Alton\n",
+            "\n",
+            " ['Joana']\n",
+            "Hello, Joana\n",
+            "\n",
+            " []\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# pop() gets the last item by default\n",
@@ -191,11 +256,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "before: [11, 21, 13, 14, 51, 161, 117, 181]\n",
+            "after : [11, 21, 13, 51, 161, 117, 181]\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# can pop specific index like pop(3)\n",
@@ -207,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "trusted": true
       },
@@ -244,18 +318,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "calcaneus\n",
+            "medial cuneiform\n",
+            "['talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] pop() and print the first and last items from the ft_bones list\n",
         "ft_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
         "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
         "\n",
+        "print(ft_bones.pop(0))\n",
+        "print(ft_bones.pop())\n",
+        "\n",
         "# [ ] print the remaining list\n",
-        "\n"
+        "print(ft_bones)\n"
       ]
     },
     {
@@ -280,11 +367,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Poodle\n",
+            "Pug\n",
+            "Lab\n"
+          ]
+        }
+      ],
       "source": [
         "dog_types = [\"Lab\", \"Pug\", \"Poodle\"]\n",
         "\n",
@@ -307,14 +404,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4]\n"
+          ]
+        }
+      ],
       "source": [
         "#[ ] complete the Register Input task above\n",
-        "\n"
+        "purchase_amounts = []\n",
+        "while True:\n",
+        "    amount = input(\"amount.. 'done' to stop\")\n",
+        "    if amount.isdigit():\n",
+        "        purchase_amounts.append(int(amount))\n",
+        "    elif amount.lower() == \"done\":\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"numbers only\")\n",
+        "print(purchase_amounts)"
       ]
     },
     {
@@ -334,14 +448,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "numbers only\n",
+            "[1, 2, 3, 4, 5, 6, 7, 4436, 4, 32, 5, 7, 8]\n",
+            "Amount taken: 8.0 New subtotal is: 8.0\n",
+            "Amount taken: 7.0 New subtotal is: 15.0\n",
+            "Amount taken: 5.0 New subtotal is: 20.0\n",
+            "Amount taken: 32.0 New subtotal is: 52.0\n",
+            "Amount taken: 4.0 New subtotal is: 56.0\n",
+            "Amount taken: 4436.0 New subtotal is: 4492.0\n",
+            "Amount taken: 7.0 New subtotal is: 4499.0\n",
+            "Amount taken: 6.0 New subtotal is: 4505.0\n",
+            "Amount taken: 5.0 New subtotal is: 4510.0\n",
+            "Amount taken: 4.0 New subtotal is: 4514.0\n",
+            "Amount taken: 3.0 New subtotal is: 4517.0\n",
+            "Amount taken: 2.0 New subtotal is: 4519.0\n",
+            "Amount taken: 1.0 New subtotal is: 4520.0\n",
+            "Total: 4520.0\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] complete the Register Total task above\n",
-        "\n"
+        "purchase_amounts = []\n",
+        "while True:\n",
+        "    amount = input(\"amount.. 'done' to stop\")\n",
+        "    if amount.isdigit():\n",
+        "        purchase_amounts.append(int(amount))\n",
+        "    elif amount.lower() == \"done\":\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"numbers only\")\n",
+        "print(purchase_amounts)\n",
+        "\n",
+        "subtotal = 0 \n",
+        "while purchase_amounts:\n",
+        "    popp = float(purchase_amounts.pop())\n",
+        "    subtotal += popp\n",
+        "    print(\"Amount taken:\", popp, \"New subtotal is:\", subtotal)\n",
+        "print(\"Total:\", subtotal)"
       ]
     },
     {
@@ -367,11 +520,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Lab', 'Poodle']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "dog_types = [\"Lab\", \"Pug\", \"Poodle\"]\n",
@@ -385,11 +546,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Lab', 'Pug', 'Poodle', 'Poodle', 'Pug', 'Poodle']\n",
+            "['Lab', 'Pug', 'Poodle', 'Pug', 'Poodle']\n",
+            "['Lab', 'Pug', 'Pug', 'Poodle']\n",
+            "['Lab', 'Pug', 'Pug']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "dogs = [\"Lab\", \"Pug\", \"Poodle\", \"Poodle\", \"Pug\", \"Poodle\"]\n",
@@ -409,11 +581,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "list.remove(x): x not in list",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn [37], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# [ ] review and run example\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# Change to \"Lab\", etc... to fix error\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m dogs\u001b[39m.\u001b[39mremove(\u001b[39m\"\u001b[39m\u001b[39mCollie\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(dogs)\n",
+            "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
+          ]
+        }
+      ],
       "source": [
         "# [ ] review and run example\n",
         "# Change to \"Lab\", etc... to fix error\n",
@@ -432,16 +616,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Lab', 'Pug', 'Poodle', 'Pug', 'Poodle']\n"
+          ]
+        }
+      ],
       "source": [
         "# [ ] remove one \"Poodle\" from the list: dogs , or print \"no Poodle found\"\n",
         "# [ ] print list before and after\n",
         "dogs = [\"Lab\", \"Pug\", \"Poodle\", \"Poodle\", \"Pug\", \"Poodle\"]\n",
-        "\n"
+        "\n",
+        "dogs.remove(\"Poodle\")\n",
+        "print(dogs)"
       ]
     },
     {
@@ -469,11 +663,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+        "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
       }
     }
   },
